syntax = "proto3";

package pb;

option go_package = "github.com/AsaHero/simple-microservice/pb";

import "laptop_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string uuid = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};
}